<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>TA19</name>
    <version>0.0.0</version>
    <description>Scripts used to teleoperate on a pair of motors</description>
    <maintainer email="allan.py3000@gmail.com">Allan Cedric</maintainer>
    <maintainer email="gabrielnhn@ufpr.br">Gabriel Nascarella</maintainer>
    <license>Apache License 2.0</license>
    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>
    <export>
        <build_type>ament_python</build_type>
        <exec_depend>rclpy</exec_depend>
        <exec_depend>std_msgs</exec_depend>
    </export>
</package>
